2014-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.5 with initial repo commit
