@@ -1,16 +1,17 @@
 Package: RcppKalman
 Type: Package
 Title: RcppArmadillo based Kalman filtering
-Version: 0.0.5
-Date: 2014-04-14
+Version: 0.0.6
+Date: 2014-12-05
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: [At this point rather incomplete] RcppArmadillo-based port of
   Kalman filtering code in the EKF/UKF Toolbox for Matlab by Simo Särkkä,
-  Jouni Hartikainen, and Arno Solin 
+  Jouni Hartikainen, and Arno Solin
 License: GPL (>= 2)
 Depends: Rcpp (>= 0.11.1), RcppArmadillo (>= 0.4.200.0)
 Suggests: RcppOctave, xts
 Imports: expm
 LinkingTo: Rcpp, RcppArmadillo
 Encoding: UTF-8
+RoxygenNote: 5.0.1
