@@ -49,7 +49,7 @@ ltiDisc <- function(F, L, Q, dt) {
 #'
 #' @title Rauch-Tung-Striebel smoother
 #' @param M An N x K matrix of K mean estimates from the Kalman Filter
-#' @param Plist A list of length N with N x N matrices of state covariances
+#' @param P An N x N x K cube length K with N x N state covariances matrices 
 #' from the Kalman Filter
 #' @param A An N x N state transition matrix (or in the more general case a
 #' list of K such matrices; not yet implemented)
@@ -67,7 +67,7 @@ ltiDisc <- function(F, L, Q, dt) {
 #' Dirk Eddelbuettel is porting this package to R and C++, and maintaing it.
 #' @seealso The documentation for the EKF/UKF toolbox at
 #' \url{http://becs.aalto.fi/en/research/bayes/ekfukf}
-rtsSmoother <- function(Min, Pin, A, Q) {
-    .Call('RcppKalman_rtsSmoother', PACKAGE = 'RcppKalman', Min, Pin, A, Q)
+rtsSmoother <- function(M, P, A, Q) {
+    .Call('RcppKalman_rtsSmoother', PACKAGE = 'RcppKalman', M, P, A, Q)
 }
 
