@@ -1,3 +1,5 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/RcppExports.R
 \name{expm}
 \alias{expm}
 \title{Compute the exponential of a matrix}
@@ -5,7 +7,7 @@
 expm(x)
 }
 \arguments{
-  \item{x}{An numeric matrix}
+\item{x}{An numeric matrix}
 }
 \value{
 A numeric matrix
@@ -14,18 +16,16 @@ A numeric matrix
 This function computes the exponential of a matrix.
 }
 \details{
-This functions calls the \code{expm} function from the
-eponymous package \pkg{expm}. This is implemented via a
-registered function call, and does not required explicit
-linking at the C level. However, the \pkg{expm} package is
-imported in order to access its registered function at the
-C level.
+This functions calls the \code{expm} function from the eponymous package 
+\pkg{expm}. This is implemented via a registered function call, and does
+not required explicit linking at the C level. However, the \pkg{expm} package
+is imported in order to access its registered function at the C level.
 
-As the documentation of package \pkg{expm} states, the
-underlying implementation borrows from the \pkg{Matrix}
-package which itself takes it from GNU Octave.
+As the documentation of package \pkg{expm} states, the underlying implementation
+borrows from the \pkg{Matrix} package which itself takes it from GNU Octave.
 }
 \examples{
+
 ## example is from the vignette in package expm
 M <- matrix(c(4, 1, 1, 2, 4, 1, 0, 1, 4), 3, 3)
 
